mod staticwebapp.config.json

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -23,7 +23,7 @@
       "statusCode": 404
     },
     {
-      "route": "/*",
+      "route": "/",
       "allowedRoles": ["authenticated"]
     }
   ],
